
  * Improvement: better parsing performance when under high thread concurrency
    <https://github.com/jhy/jsoup/pull/1402>

  * Improvement: added Element#id(String) ID attribute setter.

  * Improvement: in Document, #body() and #head() accessors will now automatically create those elements, if they were
    missing (e.g. if the Document was not parsed from HTML).

  * Build Improvement: moved to GitHub Workflows for build verification.

  * Build Improvement: updated Jetty (used for integration tests; not bundled) to 9.4.35.v2020112.

  * Build Improvement: added nullability annotations and initial settings.
    <https://github.com/jhy/jsoup/pull/1467>

  * Bugfix: when parsing HTML, could throw NPEs on some tags (isindex or table>input).
    <https://github.com/jhy/jsoup/issues/1404>

  * Bugfix: in HttpConnection.Request, headers beginning with "sec-" (e.g. Sec-Fetch-Mode) were silently discarded by
    the underlying Java HttpURLConnection. These are now settable correctly.
    <https://github.com/jhy/jsoup/issues/1461>

  * Bugfix: when adding child Nodes to a Node, could incorrectly reparent all nodes if the first parent had the same
    length of children as the incoming node list.

  * Bugfix: when wrapping an orphaned element, would throw an NPE.

  * Bugfix: when wrapping an element with HTML that included multiple sibling elements, those siblings were incorrectly
    added as children of the wrapper instead of siblings.

*** Release 1.13.1 [2020-Feb-29]
  * Improvement: added Element#closest(selector), which walks up the tree to find the nearest element matching the
    selector.
    <https://github.com/jhy/jsoup/issues/1326>

  * Improvement: memory optimizations, reducing the retained size of a Document by ~ 39%, and allocations by ~ 9%:
      1. Attributes holder in Elements is only created if the element has attributes
      2. Only track the baseUri in an element when it is set via DOM to a new value for a given tree