@@ -56,7 +56,8 @@ public class Cleaner {
 
     /**
      Creates a new, clean document, from the original dirty document, containing only elements allowed by the safelist.
-     The original document is not modified. Only elements from the dirt document's <code>body</code> are used.
+     The original document is not modified. Only elements from the dirty document's <code>body</code> are used. The
+     OutputSettings of the original document are cloned into the clean document.
      @param dirtyDocument Untrusted base document to clean.
      @return cleaned document.
      */
@@ -64,8 +65,8 @@ public class Cleaner {
         Validate.notNull(dirtyDocument);
 
         Document clean = Document.createShell(dirtyDocument.baseUri());
-        if (dirtyDocument.body() != null) // frameset documents won't have a body. the clean doc will have empty body.
-            copySafeNodes(dirtyDocument.body(), clean.body());
+        copySafeNodes(dirtyDocument.body(), clean.body());
+        clean.outputSettings(dirtyDocument.outputSettings().clone());
 
         return clean;
     }
